--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Static Resource Links</title>
+<!-- Added a comment to test Git tracking -->
 <style>
   .resource-card-link {
     display: block;
