--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 <a href="#" class="resource-card-link" data-id="14">Open Resource 14</a>
 <a href="#" class="resource-card-link" data-id="15">Open Resource 15</a>
 <a href="#" class="resource-card-link" data-id="16">click  t me</a>
+<!-- Added a new resource link -->
+<a href="#" class="resource-card-link" data-id="17">New Resource</a>
 
 <script>
   // Load resources.json
